Spring secuirity, fleshed out ui

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port: 60001
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
